# GD_solver

./: .gitignore  CMakeLists.txt  README.md
configs/: SODA.ini  initial.ini
output/: data.csv
src/: CMakeLists.txt  grid.cpp  grid.h  main.cpp  parser.cpp  parser.h  point.cpp  point.h  solver.cpp  solver.h  utils.h
